--- a/webempresa/core/static/core/css/business-casual.css
+++ b/webempresa/core/static/core/css/business-casual.css
@@ -241,11 +241,11 @@ p {
 }
 
 .text-primary {
-  color: #49cf41 !important;
+  color: #000000c4 !important ;
 }
 
 .bg-primary {
-  background-color: #2cf509 !important;
+  background-color: #000000 !important;
 }
 
 .btn {
