--- a/webempresa/core/templates/core/base.html
+++ b/webempresa/core/templates/core/base.html
@@ -34,7 +34,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav mx-auto">
-                <li class="nav-item active px-lg-4">
+                <li class="nav-item px-lg-4">
                   <a class="nav-link text-uppercase text-expanded" href="{% url 'home' %}">Inicio</a>
                 </li>
                 <li class="nav-item px-lg-4">
