--- a/webempresa_Frontend/webempresa_Frontend/css/business-casual.css
+++ b/webempresa_Frontend/webempresa_Frontend/css/business-casual.css
@@ -94,7 +94,7 @@ p {
 }
 
 #mainNav .navbar-nav .nav-item.active .nav-link {
-  color: #5e5e5ef8;
+  color: #fffffff8;
 }
 
 @media (min-width: 992px) {
@@ -105,7 +105,7 @@ p {
     color: rgba(3, 3, 3, 0.4);
   }
   #mainNav .navbar-nav .nav-item.active .nav-link:hover {
-    color: #e0e2e0;
+    color: #0f300f;
   }
 }
 
